# native/server/src/ws_hub.rs
@@ -712,6 +712,7 @@ mod tests {
             queue_id: String::new(),
             checksum: String::new(),
             file_missing: false,
+            completed_at: String::new(),
         }]));
 
         let snap = hub.live_speeds_snapshot();
@@ -734,6 +735,7 @@ mod tests {
             queue_id: String::new(),
             checksum: String::new(),
             file_missing: false,
+            completed_at: String::new(),
         }
     }
 
